[Mac] Create an NSUserActivity when sharing

When asked to perform a share with an NSURL, most share extensions use
the shared URL as the URL, and the NSShareService property |subject|
as a title.

For some reason, Reminders is different. It extracts the TLD of the URL
to use as the text of the reminder, but uses the title and URL of the
current NSUserActivity as the reminder title and navigable URL,
respectively.

As it happens, we *do* have an active NSUserActivity at share time
(used for Handoff) but:
- For whatever reason, sometimes the Reminders extension doesn't
see it.
- It only has the URL and not a title. Plumbing through a title isn't
trivial since the URL is currently being set before the page HTML has
been parsed and the title's known.

This change creates a correctly configured NSUserActivity right at
the moment that a share is being performed, then immediately
invalidates it when the share has completed or been canceled.

Bug: 773452
Change-Id: I01adc754cc99f33e33027ce883c05a86d66ac093
Reviewed-on: https://chromium-review.googlesource.com/738279
Reviewed-by: Jayson Adams <shrike@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512217}