chrome/browser/ui/cocoa/share_menu_controller.mm
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/mac/foundation_util.h"
 #include "base/mac/mac_util.h"
+#include "base/mac/sdk_forward_declarations.h"
 #include "base/strings/sys_string_conversions.h"
 #include "chrome/app/chrome_command_ids.h"
 #include "chrome/browser/ui/browser.h"
@@ -44,6 +45,9 @@ NSString* const kOpenSharingSubpaneProtocolValue = @"com.apple.share-services";
   NSWindow* windowForShare_;  // weak
   NSRect rectForShare_;
   base::scoped_nsobject<NSImage> snapshotForShare_;
+  // The Reminders share extension reads title/URL from the currently active
+  // activity.
+  base::scoped_nsobject<NSUserActivity> activity_ API_AVAILABLE(macos(10.10));
 }
 
 + (BOOL)shouldShowMoreItem {
@@ -143,6 +147,10 @@ NSString* const kOpenSharingSubpaneProtocolValue = @"com.apple.share-services";
   windowForShare_ = nil;
   rectForShare_ = NSZeroRect;
   snapshotForShare_.reset();
+  if (@available(macOS 10.10, *)) {
+    [activity_ invalidate];
+    activity_.reset();
+  }
 }
 
 // Performs the share action using the sharing service represented by |sender|.
@@ -170,6 +178,13 @@ NSString* const kOpenSharingSubpaneProtocolValue = @"com.apple.share-services";
     itemsToShare = @[ url, title ];
   } else {
     itemsToShare = @[ url ];
+  }
+  if (@available(macOS 10.10, *)) {
+    activity_.reset([[NSUserActivity alloc]
+        initWithActivityType:NSUserActivityTypeBrowsingWeb]);
+    [activity_ setWebpageURL:url];
+    [activity_ setTitle:title];
+    [activity_ becomeCurrent];
   }
   [service performWithItems:itemsToShare];
 }
